app/ratel/tailwind.css
/* ... */
/* ==========================================================================
   Buttons
   ========================================================================== */

@theme static {
  /* Primary (same in both themes) */
  --color-btn-primary-bg: #fcb300;
  --color-btn-primary-outline: #fcb300;
  --color-btn-primary-text: #0a0a0a;
  --color-btn-primary-hover-bg: #ca8f00;
  --color-btn-primary-hover-outline: #ca8f00;
  --color-btn-primary-hover-text: #0a0a0a;
  --color-btn-primary-disable-bg: #8c680f;
  --color-btn-primary-disable-outline: #8c680f;
  --color-btn-primary-disable-text: #0a0a0a;

  /* Secondary */
  --color-btn-secondary-bg: var(--dark, #ffffff) var(--light, #404040);
  --color-btn-secondary-outline: var(--dark, #ffffff) var(--light, #404040);
  --color-btn-secondary-text: var(--dark, #0a0a0a) var(--light, #ffffff);
  --color-btn-secondary-hover-bg: var(--dark, #cccccc) var(--light, #333333);
  --color-btn-secondary-hover-outline: var(--dark, #cccccc)
    var(--light, #333333);
  --color-btn-secondary-hover-text: var(--dark, #0a0a0a) var(--light, #ffffff);
  --color-btn-secondary-disable-bg: var(--dark, #8e8e8e) var(--light, #999999);
  --color-btn-secondary-disable-outline: var(--dark, #8e8e8e)
    var(--light, #999999);
  --color-btn-secondary-disable-text: var(--dark, #0a0a0a) var(--light, #ffffff);

  /* Outline */
  --color-btn-outline-bg: transparent;
  --color-btn-outline-outline: var(--dark, #ffffff) var(--light, #a3a3a3);
  --color-btn-outline-text: var(--dark, #ffffff) var(--light, #171717);
  --color-btn-outline-hover-bg: var(--dark, #ffffff0d) var(--light, #c1c1c1);
  --color-btn-outline-hover-outline: var(--dark, #cccccc) var(--light, #a3a3a3);
  --color-btn-outline-hover-text: var(--dark, #ffffff) var(--light, #171717);
  --color-btn-outline-disable-bg: transparent;
  --color-btn-outline-disable-outline: var(--dark, #8e8e8e)
    var(--light, #cacaca);
  --color-btn-outline-disable-text: var(--dark, #8e8e8e) var(--light, #848484);

  /* Action Settings */
  --color-btn-action-settings-bg: var(--dark, #0a0a0a) var(--light, #ffffff);
  --color-btn-action-settings-text: var(--dark, #ffffff) var(--light, #0a0a0a);
  --color-btn-action-settings-icon: var(--dark, #0a0a0a) var(--light, #ffffff);
}

/* ==========================================================================
   Switch
   ========================================================================== */

@theme static {
  --color-switch-track: var(--dark, #404040) var(--light, #d4d4d4);
  --color-switch-knob: var(--dark, #ffffff) var(--light, #ffffff);
}

/* ==========================================================================
   Icons
   ========================================================================== */

@theme static {
  --color-icon-primary: #737373;
  --color-icon-secondary: var(--dark, #ffffff) var(--light, #262626);
  --color-icon-success: var(--dark, #16a34a) var(--light, #16a34a);
  --color-icon-error: var(--dark, #ef4444) var(--light, #ef4444);
}

/* ==========================================================================
   Font
   ========================================================================== */

@theme static {
  --font-raleway: "Raleway", sans-serif;
  --font-inter: "Inter", sans-serif;

  --color-font-primary: var(--dark, #ffffff) var(--light, #191919);
}

/* ==========================================================================
   Team Page
   ========================================================================== */

@theme static {
  --color-team-bg: var(--dark, #111111) var(--light, #f1f1f1);
}

/* ==========================================================================
   Space Page
   ========================================================================== */

@theme static {
  --color-space-bg: var(--dark, #191919) var(--light, #f9f9f9);
  --color-space-body-bg: #1d1d1d;

  --color-space-nav-item-hover: var(--dark, #fcb30005) var(--light, #00000005);
  --color-space-nav-item-selected: var(--dark, #fcb3000d)
    var(--light, #0000001a);
}
/* ... */

